gpreload should exclude views when checking the tables for reload
Add gpreload behave test

* gpreload test where a table (public.t1) and
  view (gpreload_schema.t1) have the same name.

Add gpreload CI test jobs.

--- a/concourse/pipelines/templates/gpdb-tpl.yml
+++ b/concourse/pipelines/templates/gpdb-tpl.yml
@@ -25,6 +25,7 @@
                       'reindexdb',
                       'gpperfmon',
                       'gpinitsystem',
+                      'gpreload',
                       'gpstart'] %}
 {% set aa_Test_suites = ['Planner_centos6',
                          'Orca_centos6',
